bad/missing_return_after_while_with_return.example_compiler_output
ERROR
[1mbad/missing_return_after_while_with_return.lat:3:2: [1;35mwarning: [0;1mwhile will execute at most once, because its body always stops execution[m
	while (readInt() == 42) return 0;
	[1;32m^[m
[1mbad/missing_return_after_while_with_return.lat:2:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
int main() {
[1;32m^[m
